[gd_scene load_steps=4 format=3 uid="uid://bjr7bcy8cwcw4"]

[ext_resource type="Script" path="res://script/main.gd" id="1_6wtgq"]
[ext_resource type="Theme" uid="uid://deehlrh573mkc" path="res://base_theme.tres" id="1_e2rgu"]
[ext_resource type="PackedScene" uid="uid://bqxer5ekgpsyw" path="res://scenes/settings.tscn" id="3_ows2v"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wtgq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 857.0
offset_top = 347.0
offset_right = -857.0
offset_bottom = -347.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_e2rgu")
text = "Play"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_e2rgu")
text = "Settings"

[node name="credit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_e2rgu")
text = "Credit"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_e2rgu")
text = "Quit"

[node name="settings" parent="." instance=ExtResource("3_ows2v")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
